--- a/src/comp/scss/variables.scss
+++ b/src/comp/scss/variables.scss
@@ -78,6 +78,7 @@
 :root {
   --color-table-border: #d8d8d8;
   --color-table-header: #474747;
+  --color-table-row: #646464;
   --color-table-row-hover: #f3f3f3;
 }
 
