--- a/asset/scss/button.scss
+++ b/asset/scss/button.scss
@@ -1,96 +1,437 @@
 html {
-  // normal
-  --color-button-normal: #fff;
-  --color-button-normal-hover: #eaeaea;
-  --color-button-normal-active: #dfdfdf;
-  --color-button-normal-font: #474747;
-  --color-button-normal-font-hover: #2a85ff;
-  --color-button-normal-font-active: #267ff4;
-  --filter-button-normal-img: brightness(0) saturate(100%) invert(27%) sepia(25%) saturate(0%) hue-rotate(247deg) brightness(90%) contrast(92%);
-  --filter-button-normal-img-hover: brightness(0) saturate(100%) invert(53%) sepia(51%) saturate(6062%) hue-rotate(199deg) brightness(101%) contrast(101%);
-  --filter-button-normal-img-active: brightness(0) saturate(100%) invert(46%) sepia(87%) saturate(3732%) hue-rotate(200deg) brightness(97%) contrast(97%);
-
-  // primary
-  --color-button-primary: #2a85ff;
-  --color-button-primary-hover: #4996ff;
-  --color-button-primary-active: #2b7eef;
-  --color-button-primary-font: #f6f6f6;
-  --color-button-primary-font-hover: #ffffff;
-  --color-button-primary-font-active: #ececec;
-  --filter-button-primary-img: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(203%) hue-rotate(38deg) brightness(113%) contrast(93%);
-  --filter-button-primary-img-hover: brightness(0) saturate(100%) invert(100%) sepia(0%) saturate(203%) hue-rotate(38deg) brightness(113%) contrast(93%);
-  --filter-button-primary-img-active: brightness(0) saturate(100%) invert(100%) sepia(5%) saturate(496%) hue-rotate(9deg) brightness(112%) contrast(85%);
+  --button-shadow: rgba(0, 0, 0, 0.1);
+  --button-background-color: rgb(0, 0, 0, 0);
+  --button-hover-filter: drop-shadow(0 0.2rem 0.2rem var(--button-shadow));
+  --button-active-filter: brightness(0.9);
 }
+
+html.dark {
+  --button-shadow: rgba(0, 0, 0, 0.2);
+  --button-background-color: #fff;
+}
+
+// ------------------------------------------------------------
+// button hover active
 
 .button {
-  outline: none;
-  border-radius: 0.2rem;
   border-width: 2px;
+  border-color: transparent;
+
+  &:hover {
+    filter: var(--button-hover-filter);
+  }
+
+  &:active {
+    filter: var(--button-active-filter) !important;
+  }
+}
+
+// ------------------------------------------------------------
+// disabled
+
+.button.disabled {
+  filter: grayscale(30%) brightness(0.8);
+  cursor: not-allowed;
+
+  &:hover {
+    filter: grayscale(30%) brightness(0.8) !important;
+  }
+}
+
+// ------------------------------------------------------------
+// button size
+
+.button.sm {
+  font-size: 0.8rem;
+
+  img.button-icon {
+    width: 0.8rem;
+    height: 0.8rem;
+  }
+}
+
+.button.nm {
   font-size: 1rem;
-  letter-spacing: 0.07rem;
-  cursor: pointer;
-  height: var(--input-height);
-  padding: 0 0.7rem 0 0.7rem;
-}
 
-.button.normal {
-  border-color: var(--color-button-normal-hover);
-  background-color: var(--color-button-normal);
-  color: var(--color-button-normal-font);
-
-  img {
-    filter: var(--filter-button-normal-img);
+  img.button-icon {
+    width: 1rem;
+    height: 1rem;
   }
 }
 
-.button.normal:hover {
-  border-color: var(--color-button-normal-hover);
-  background: var(--color-button-normal-hover);
-  color: var(--color-button-normal-font-hover);
+.button.lg {
+  font-size: 1.2rem;
 
-  img {
-    filter: var(--filter-button-normal-img-hover);
-  }
-}
-
-.button.normal:active {
-  border-color: var(--color-button-normal-active);
-  background: var(--color-button-normal-active);
-  color: var(--color-button-normal-font-active);
-
-  img {
-    filter: var(--filter-button-normal-img-active);
+  img.button-icon {
+    width: 1.2rem;
+    height: 1.2rem;
   }
 }
 
 
-// primary
-.button.primary {
-  border-color: var(--color-button-primary);
-  background-color: var(--color-button-primary);
-  color: var(--color-button-primary-font);
+// ------------------------------------------------------------
+// button corner
 
-  img {
-    filter: var(--filter-button-primary-img);
+.button.square {
+  border-radius: 0.2rem;
+}
+
+.button.round {
+  border-radius: 1.5rem;
+}
+
+// ------------------------------------------------------------
+// button shape
+
+.button.pilled:hover {
+  filter: brightness(1.2);
+}
+
+.button.pilled {
+  background-color: var(--primary);
+  color: var(--primary-opposite);
+
+  &.primary {
+    background-color: var(--primary);
+    color: var(--primary-opposite);
+
+    img.button-icon {
+      filter: var(--primary-opposite-filter);
+    }
+  }
+
+  &.secondary {
+    background-color: var(--secondary);
+    color: var(--secondary-opposite);
+
+    img.button-icon {
+      filter: var(--secondary-opposite-filter);
+    }
+  }
+
+  &.info {
+    background-color: var(--info);
+    color: var(--info-opposite);
+
+    img.button-icon {
+      filter: var(--info-opposite-filter);
+    }
+  }
+
+  &.success {
+    background-color: var(--success);
+    color: var(--success-opposite);
+
+    img.button-icon {
+      filter: var(--success-opposite-filter);
+    }
+  }
+
+  &.warning {
+    background-color: var(--warning);
+    color: var(--warning-opposite);
+
+    img.button-icon {
+      filter: var(--warning-opposite-filter);
+    }
+  }
+
+  &.danger {
+    background-color: var(--danger);
+    color: var(--danger-opposite);
+
+    img.button-icon {
+      filter: var(--danger-opposite-filter);
+    }
+  }
+
+  &.light {
+    background-color: var(--light);
+    color: var(--light-opposite);
+
+    img.button-icon {
+      filter: var(--light-opposite-filter);
+    }
+  }
+
+  &.dark {
+    background-color: var(--dark);
+    color: var(--dark-opposite);
+
+    img.button-icon {
+      filter: var(--dark-opposite-filter);
+    }
+  }
+
+  &.pink {
+    background-color: var(--pink);
+    color: var(--pink-opposite);
+
+    img.button-icon {
+      filter: var(--pink-opposite-filter);
+    }
+  }
+
+  &.purple {
+    background-color: var(--purple);
+    color: var(--purple-opposite);
+
+    img.button-icon {
+      filter: var(--purple-opposite-filter);
+    }
+  }
+
+  &.blue {
+    background-color: var(--blue);
+    color: var(--blue-opposite);
+
+    img.button-icon {
+      filter: var(--blue-opposite-filter);
+    }
   }
 }
 
-.button.primary:hover {
-  border-color: var(--color-button-primary-hover);
-  background: var(--color-button-primary-hover);
-  color: var(--color-button-primary-font-hover);
 
-  img {
-    filter: var(--filter-button-primary-img-hover);
+// ------------------------------------------------------------
+// outline
+
+.button.outlined {
+  border-width: 2px;
+  border-style: solid;
+  border-color: transparent;
+}
+
+.button.outlined.primary {
+  border-color: var(--primary);
+  color: var(--primary);
+
+  img.button-icon {
+    filter: var(--primary-filter);
   }
 }
 
-.button.primary:active {
-  border-color: var(--color-button-primary-active);
-  background: var(--color-button-primary-active);
-  color: var(--color-button-primary-font-active);
+.button.outlined.primary:hover {
+  background-color: var(--primary);
+  color: var(--primary-opposite);
 
-  img {
-    filter: var(--filter-button-primary-img-active);
+  img.button-icon {
+    filter: var(--primary-opposite-filter);
   }
 }
+
+.button.outlined.secondary {
+  border-color: var(--secondary);
+  color: var(--secondary);
+
+  img.button-icon {
+    filter: var(--secondary-filter);
+  }
+}
+
+.button.outlined.secondary:hover {
+  background-color: var(--secondary);
+  color: var(--secondary-opposite);
+
+  img.button-icon {
+    filter: var(--secondary-opposite-filter);
+  }
+}
+
+
+.button.outlined.info {
+  border-color: var(--info);
+  color: var(--info);
+
+  img.button-icon {
+    filter: var(--info-filter);
+  }
+}
+
+.button.outlined.info:hover {
+  background-color: var(--info);
+  color: var(--info-opposite);
+
+  img.button-icon {
+    filter: var(--info-opposite-filter);
+  }
+}
+
+
+.button.outlined.success {
+  border-color: var(--success);
+  color: var(--success);
+
+  img.button-icon {
+    filter: var(--success-filter);
+  }
+}
+
+.button.outlined.success:hover {
+  background-color: var(--success);
+  color: var(--success-opposite);
+
+  img.button-icon {
+    filter: var(--success-opposite-filter);
+  }
+}
+
+
+.button.outlined.warning {
+  border-color: var(--warning);
+  color: var(--warning);
+
+  img.button-icon {
+    filter: var(--warning-filter);
+  }
+}
+
+.button.outlined.warning:hover {
+  background-color: var(--warning);
+  color: var(--warning-opposite);
+
+  img.button-icon {
+    filter: var(--warning-opposite-filter);
+  }
+}
+
+
+.button.outlined.danger {
+  border-color: var(--danger);
+  color: var(--danger);
+
+  img.button-icon {
+    filter: var(--danger-filter);
+  }
+}
+
+.button.outlined.danger:hover {
+  background-color: var(--danger);
+  color: var(--danger-opposite);
+
+  img.button-icon {
+    filter: var(--danger-opposite-filter);
+  }
+}
+
+
+.button.outlined.light {
+  border-color: var(--light);
+  color: var(--light);
+
+  img.button-icon {
+    filter: var(--light-filter);
+  }
+}
+
+.button.outlined.light:hover {
+  background-color: var(--light);
+  color: var(--light-opposite);
+
+  img.button-icon {
+    filter: var(--light-opposite-filter);
+  }
+}
+
+.button.outlined.dark {
+  border-color: var(--dark);
+  color: var(--dark);
+
+  img.button-icon {
+    filter: var(--dark-filter);
+  }
+}
+
+.button.outlined.dark:hover {
+  background-color: var(--dark);
+  color: var(--dark-opposite);
+
+  img.button-icon {
+    filter: var(--dark-opposite-filter);
+  }
+}
+
+.button.outlined.pink {
+  border-color: var(--pink);
+  color: var(--pink);
+
+  img.button-icon {
+    filter: var(--pink-filter);
+  }
+}
+
+.button.outlined.pink:hover {
+  background-color: var(--pink);
+  color: var(--pink-opposite);
+
+  img.button-icon {
+    filter: var(--pink-opposite-filter);
+  }
+}
+
+
+.button.outlined.purple {
+  border-color: var(--purple);
+  color: var(--purple);
+
+  img.button-icon {
+    filter: var(--purple-filter);
+  }
+}
+
+.button.outlined.purple:hover {
+  background-color: var(--purple);
+  color: var(--purple-opposite);
+
+  img.button-icon {
+    filter: var(--purple-opposite-filter);
+  }
+}
+
+
+.button.outlined.blue {
+  border-color: var(--blue);
+  color: var(--blue);
+
+  img.button-icon {
+    filter: var(--blue-filter);
+  }
+}
+
+.button.outlined.blue:hover {
+  background-color: var(--blue);
+  color: var(--blue-opposite);
+
+  img.button-icon {
+    filter: var(--blue-opposite-filter);
+  }
+}
+
+// ------------------------------------------------------------
+// tooltip
+
+//.button:hover {
+//  .tooltip {
+//    visibility: visible;
+//  }
+//}
+//
+//.button {
+//  .tooltip {
+//    visibility: hidden;
+//    background-color: black;
+//    color: #fff;
+//    border-radius: 0.2rem;
+//    z-index: 1;
+//  }
+//
+//  .tooltip::after {
+//    content: " ";
+//    position: absolute;
+//    bottom: 100%; /* At the top of the tooltip */
+//    left: 50%;
+//    margin-left: -5px;
+//    border-width: 5px;
+//    border-style: solid;
+//    border-color: transparent transparent black transparent;
+//  }
+//}
