--- a/asset/scss/button.scss
+++ b/asset/scss/button.scss
@@ -16,6 +16,7 @@ html.dark {
 .button {
   border-width: 2px;
   border-color: transparent;
+  overflow: hidden;
 
   &:hover {
     filter: var(--button-hover-filter);
