--- a/asset/scss/variables.scss
+++ b/asset/scss/variables.scss
@@ -9,14 +9,14 @@ html {
   --theme-header-height: 60px;
 }
 
-.themeBorder {
+.theme-border {
   border-color: var(--theme-border-color);
 }
 
-.themeBackground {
+.theme-background {
   background-color: var(--theme-background-color);
 }
 
-.themePaperColor {
+.theme-paper-color {
   background-color: var(--theme-paper-color);
 }
