--- a/src/asset/style/tailwind.css
+++ b/src/asset/style/tailwind.css
@@ -215,6 +215,9 @@
   .hidden {
     display: none;
   }
+  .table {
+    display: table;
+  }
   .h-\(--height-nav\) {
     height: var(--height-nav);
   }
@@ -229,6 +232,12 @@
   }
   .w-\(--width-aside\) {
     width: var(--width-aside);
+  }
+  .w-1\/4 {
+    width: calc(1/4 * 100%);
+  }
+  .w-2\/4 {
+    width: calc(2/4 * 100%);
   }
   .w-4\/5 {
     width: calc(4/5 * 100%);
