update modal style

--- a/src/asset/style/layout.scss
+++ b/src/asset/style/layout.scss
@@ -1,5 +1,7 @@
 @layer base {
   html {
+    --color-background-body: #f1f1f1;
+    --color-background-nav: #fff;
     --color-background-layout-section-3-aside-submenu: #e0f3ff;
   }
 
