--- a/src/asset/style/button.scss
+++ b/src/asset/style/button.scss
@@ -7,6 +7,7 @@
   }
 
   .button {
+    outline: none;
     border-width: 1px;
     border-color: transparent;
     padding: 0 20px 0 20px;
@@ -16,6 +17,7 @@
     }
 
     &:active {
+
       filter: var(--filter-active-button);
     }
   }
